--- a/templates/index.html
+++ b/templates/index.html
@@ -1,195 +1,102 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="static/style.css"> 
-     <!-- add icon link -->
-     <link rel = "icon" type = "image/x-icon" href ="static/logo_tr.png">  
-    <title>Breast Cancer Prediction Model</title>
-    <meta charset="utf-8" name="viewport" 
-    content= "width=device-width, initial-scale=1.0">
-    <!-- <style>
-      div {
-        background-image: url('static/bg.png');
-      }
-      </style> -->
-  </head>
-  
-  <body>
-    <div class="container_main">
-      <div class="sub_container" id="holder">
-          <table>
-            <tr><td><IMG SRC="static/logo_tr.png" ALT="tries" WIDTH=185 HEIGHT=129></td>
-            <td><center><h1 class='main_heading'>Breast Cancer Prediction Model</h1></center></td>
-          </tr>
-        </table>
-        <hr style="height:3px;border-width:0;color:gray;background-color:gray">
-        <p>Logistic Regression Classification model is developed based on 13 features that classify whether the breast cancer is benign or malignant.For classifying the patient, users are requested to submit their data on this following form as per the value range provided in the input placeholder.
-        <b>[Note: For predicted value, please check the footer of the table.]</b></p>
-        <table class="t1">
-        <form class="form-horizontal" action="{{ url_for('predict')}}" method="post">
-          <div class="form-group">
-            <div class="col-sm-10">
-                <thead>
-                  <tr><th colspan="2"><b><h4>Submission Form </h4></b></th></tr>
-                </thead>
-                <tfoot>
-                  <tr><th colspan="2"><center><b><h4>{{ prediction_text}}</h4></b></center></th></tr>
-                </tfoot>
-                 <tr><td><label for = "radius_mean">Radius Mean:</label></td>
-                  <td>          
-                    <span>
-                      <input  class="form-control" type= "text" name="radius_mean" placeholder="Value range: 6.981 - 28.11" required="required" />
-                    </span>
-                </td></tr>
-        </div>
-      </div>
-     
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "texture_mean">Texture Mean:</label></td>
-            <td>
-          <span><input  class="form-control" type="text" name="texture_mean" placeholder="Value range: 9.71 - 39.28" required="required" /></span>
-          </td></tr>
-        </div>
-      </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hotel Booking Cancellation Prediction</title>
+    <style>
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            font-family: Arial, sans-serif;
+        }
 
-      
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "area_mean">Area Mean:</label></td>
-            <td>
-          <span>
-          <input  class="form-control" type="text" name="area_mean" placeholder="Value range: 143.5 - 2501" required="required" />
-        </span>
-      </td></tr>
-        </div>
-      </div>
-      
-      <div class="form-group">
-        <div class="col-sm-10">
-        <tr><td><label for = "concavity_mean">Concavity Mean:</label></td>
-          <td>
-          <span>
-          <input  class="form-control" type="text" name="concavity_mean" placeholder="Value range: 0.0 - 0.4268" required="required" />
-          </span>
-        </td></tr>
-        </div>
-      </div>
-      
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "concave points_mean">Concave Points Mean:</label></td>
-          <td>
-          <span>
-          <input  class="form-control" type="text" name="concave points_mean" placeholder="Value range: 0.0 - 0.2012" required="required" />
-          </span>
-        </td></tr>
-        </div>
-      </div>
-      
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "area_se">Area SE:</label></td>
-            <td>
-          <span>
-          <input  class="form-control" type="text" name="area_se" placeholder="Value range: 6.802 - 542.2" required="required" />
-          </span>
-        </td></tr>
-        </div>
-      </div>
-      
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "radius_worst">Radius Worst:</label></td>
-            <td>
-          <span>
-          <input  class="form-control" type="text" name="radius_worst" placeholder="Value range: 7.93 - 36.04" required="required" />
-          </span>
-        </td></tr>
-        </div>
-      </div>
+        .form-group {
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+            width: 100%;
+        }
 
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "texture_worst">Texture Worst:</label></td>
-          <td>
-          <span>
-          <input  class="form-control" type="text" name="texture_worst" placeholder="Value range: 12.02 - 49.54" required="required" />
-          </span>
-        </td></tr>
-        </div>
-      </div>
+        label {
+            margin-right: 10px;
+            min-width: 150px;
+            text-align: right;
+        }
 
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "perimeter_worst">Perimeter Worst:</label></td>
-            <td>
-          <span>
-          <input  class="form-control" type="text" name="perimeter_worst" placeholder="Value range: 50.41 - 251.2" required="required" />
-          </span>
-        </td></tr>
-        </div>
-      </div>
+        input[type="number"],
+        input[type="checkbox"] {
+            flex: 1;
+            padding: 5px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
 
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "area_worst">Area Worst:</label></td>
-            <td>
-          <span>
-          <input  class="form-control" type="text" name="area_worst" placeholder="Value range: 185.2 - 4254" size="5" required="required"/>
-          </span>
-        </td></tr>
-        </div>
-      </div>
+        button[type="submit"] {
+            margin-top: 15px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+            padding: 10px 20px;
+            border-radius: 5px;
+            border: none;
+            background-color: #007bff;
+            color: #fff;
+            cursor: pointer;
+        }
 
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "concavity_worst">Concavity Worst:</label></td>
-            <td>
-          <span>
-          <input  class="form-control" type="text" name="concavity_worst" placeholder="Value range: 0.0 - 1.252" size="5" required="required"/>
-          </span>
-        </td></tr>
-        </div>
-      </div>
+        button[type="submit"]:hover {
+            background-color: #0056b3;
+        }
 
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "concave points_worst">Concave Points Worst:</label></td>
-            <td>
-          <span>
-          <input  class="form-control" type="text" name="concave points_worst" placeholder="Value range: 0.0 - 0.291" size="5" required="required"/>
-          </span>
-        </td></tr>
-        </div>
-      </div>
 
-      <div class="form-group">
-        <div class="col-sm-10">
-          <tr><td><label for = "symmetry_worst">Symmetry Worst:</label></td>
-            <td>
-          <span>
-          <input  class="form-control" type="text" name="symmetry_worst" placeholder="Value range: 0.156 - 0.663" size="5" required="required"/>
-          </span>
-        </td></tr>
+        .result {
+            margin-top: 20px;
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Hotel Booking Cancellation Prediction</h1>
+        <form action="/registrazione" method="post">
+            <div class="form-group">
+                <label for="lead-time">Lead Time:</label>
+                <input type="number" id="lead-time" name="lead-time" placeholder="Lead Time" required>
+            </div>
+            <div class="form-group">
+                <label for="avg-price">Average Price:</label>
+                <input type="number" id="avg-price" name="avg-price" placeholder="Average Price" required>
+            </div>
+            <div class="form-group">
+                <label for="special-requests">Special Requests:</label>
+                <input type="number" id="special-requests" name="special-requests" placeholder="Special Requests" required>
+            </div>
+            <div class="form-group">
+                <label for="day">Day:</label>
+                <input type="number" id="day" name="day" placeholder="Day" required min="1" max="31" pattern="\d+" title="Day must be a positive integer">
+            </div>
+            <div class="form-group">
+                <label for="month">Month:</label>
+                <input type="number" id="month" name="month" placeholder="Month" required min="1" max="12">
+            </div>
+            <div class="form-group">
+                <label for="market-segment-online">Market Segment (Online):</label>
+                <input type="checkbox" id="market-segment-online" name="market-segment-online">
+            </div>
+            <div class="form-group">
+                <label for="market-segment-offline">Market Segment (Offline):</label>
+                <input type="checkbox" id="market-segment-offline" name="market-segment-offline">
+            </div>
+            <button type="submit">Predict</button>
+        </form>
+        <div class="result">
+            <h2>Prediction Result</h2>
+            <p id="prediction"></p>
         </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-         <tr><td colspan="2"><button type="submit" class="btnsub">PREDICT</button></td></tr>
-        </div>
-      </div>
-    </form>
-    <h2 class="result"></h2>
-  </div>
-  </div>
-  </table>
-  </body>
+    </div>
+</body>
 </html>
-
